<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    tools:context=".appUI.fragments.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp"
        tools:context=".appUI.fragments.RegisterFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            style="@style/text_extra_large_semi_bold"
            android:layout_centerVertical="true"
            android:text="@string/company_name"
            android:textSize="@dimen/_17ssp" />

        <ImageView
            android:id="@+id/register_menu"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_blue"
            android:contentDescription="@string/image"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/hamburger" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/light_gray" />

    <androidx.cardview.widget.CardView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:elevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_extra_large_semi_bold"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/create_your_account"
                android:textSize="@dimen/_20ssp" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:gravity="center"
                android:textSize="@dimen/_14ssp"
                android:text="@string/a_couple_details" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="@dimen/_14ssp" />

            <com.app.farm.utilities.MyEditText
                android:id="@+id/email"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:autofillHints="emailAddress"
                android:background="@drawable/et_bg_normal"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/email_error"
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/email_warning"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="@dimen/_14ssp" />

            <com.app.farm.utilities.MyEditText
                android:id="@+id/password"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:autofillHints="emailAddress"
                android:background="@drawable/et_bg_normal"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/password_error"
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/password_warning"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/confirm_password"
                android:textSize="@dimen/_14ssp" />

            <com.app.farm.utilities.MyEditText
                android:id="@+id/confirm_password"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:autofillHints="emailAddress"
                android:background="@drawable/et_bg_normal"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/confirm_password_error"
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/confirm_password_error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/first_name"
                android:textSize="@dimen/_14ssp" />

            <com.app.farm.utilities.MyEditText
                android:id="@+id/first_name"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:autofillHints="username"
                android:background="@drawable/et_bg_normal"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/first_name_error"
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/first_name_error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                style="@style/text_normal_medium"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/last_name"
                android:textSize="@dimen/_14ssp" />

            <com.app.farm.utilities.MyEditText
                android:id="@+id/last_name"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:autofillHints="username"
                android:background="@drawable/et_bg_normal"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/last_name_error"
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/last_name_error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                style="@style/text_normal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/password_warning"
                android:textColor="@color/red"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp">

                <Button
                    android:id="@+id/btn_register"
                    style="@style/btn_normal_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/btn_back"
                    style="@style/btn_normal_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/back_to_login"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/body"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/footer"
        style="@style/text_normal"
        android:layout_below="@+id/divider_bottom"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/footer"
        android:textSize="@dimen/_14ssp" />

</RelativeLayout>

</androidx.core.widget.NestedScrollView>