<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    tools:context=".appUI.fragments.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp"
        tools:context=".appUI.fragments.RegisterFragment">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                style="@style/text_extra_large_semi_bold"
                android:layout_centerVertical="true"
                android:text="@string/company_name"
                android:textSize="@dimen/_17ssp" />

            <ImageView
                android:id="@+id/dashboard_menu"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_btn_blue"
                android:contentDescription="@string/image"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/hamburger" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/header"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/light_gray" />

        <androidx.cardview.widget.CardView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:elevation="@dimen/_2sdp"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/text_extra_large_semi_bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/farm_dashboard"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    style="@style/text_normal_medium"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/dashboard_intro" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/btn_normal_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_30sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/field_one_plants" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/body"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/footer"
            style="@style/text_normal"
            android:layout_below="@+id/divider_bottom"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/footer"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>